WIP add more to html and JS

--- a/Index.html
+++ b/Index.html
@@ -16,4 +16,7 @@
     <input id="triangle3Input" type="text" name="triangle3Input">
     <button type="submit">Submit!</button>
   </form>
+
+  <h2>Results</h2>
+  <p id="output"></p>
 </body>
