--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,11 @@
   <h1>Triangle Tracker</h1>
   <form>
     <label for="triangle1Input">Left side</label>
-    <input id="triangle1Input" type="text" name="triangle1Input">
+    <input id="triangle1Input" type="number" name="triangle1Input" value=0>
     <label for="triangle2Input">Right side</label>
-    <input id="triangle2Input" type="text" name="triangle2Input">
+    <input id="triangle2Input" type="number" name="triangle2Input" value=0>
     <label for="traingle3Input">Bottom</label>
-    <input id="triangle3Input" type="text" name="triangle3Input">
+    <input id="triangle3Input" type="number" name="triangle3Input" value=0>
     <button type="submit">Submit!</button>
   </form>
 
